Fix overflow of comments and programs letters

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,8 @@ body {
     padding: 5px 10px;
     border-radius: 6px;
     border: 2px solid black;
+    margin-left: -30px; 
+    margin-right: -30px;
 }
 
 a {
@@ -35,6 +37,9 @@ a:hover {
     margin-bottom: 1em;
     border-radius: 6px;
     padding: 0.2em 0.5em;
+    overflow-wrap: break-word; 
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .content {
@@ -53,6 +58,17 @@ a:hover {
 }
 
 .comment {
+    background-color: #808f85;
+    border: 1px solid black;
+    margin: 1em;
+    border-radius: 6px;
+    padding: 0.2em 0.5em;
+    overflow-wrap: break-word; 
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
+.info {
     background-color: #808f85;
     border: 1px solid black;
     margin: 1em;
